--- a/IVaComp/TrialPred/config.yml
+++ b/IVaComp/TrialPred/config.yml
@@ -2,13 +2,14 @@ dataset: dataset
 subject: aa
 task: hand
 node_num: 118
+num_classes: 2
 window_size: 10
 epochs: 50
 log_interval: 10
 in_features: 1
 out_features: 64
 lstm_features: 128
-lr: 0.01
+lr: 0.001
 batch_size: 16
 gradient_clip: 5.0
 weight_clip: 0.0001
